# template-cpp

./: CMakeLists.txt  Makefile  README.md  config.toml
include/: program.hpp
include/core/: process.hpp
include/db/: store.hpp
include/model/: vehicle.hpp
scripts/: build_debug.sh  build_release.sh  env_ssl.sh
src/: CMakeLists.txt  program.cpp  scripting_lua.cpp  scripting_py.cpp
src/core/: CMakeLists.txt  process.cpp
src/db/: CMakeLists.txt  store.cpp
src/model/: CMakeLists.txt  vehicle.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_model.cpp  test_postgres.cpp
tests/lua_lib/: Makefile  player.cpp  test.lua
